        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* <<span-to-string,`span.toString()`>> and <<transaction-to-string,`transaction.toString()`>>
  have been *deprecated*. The exact string output may change in v4 of the
  agent.

* Add `Span.ids` and `Transaction.ids` to TypeScript types. ({pull}2347[#2347])

* Improve `span.sync` determination (fixes {issues}1996[#1996]) and stop
  reporting `transaction.sync` which was never used ({issues}2292[#2292]).
  A minor semantic change is that `span.sync` is not set to a final value
  until `span.end()` is called. Before `span.end()` the value will always
  by `true`.

* Guard against a negative value of `metricsInterval`, which can lead to
  high CPU usage as metrics are collected as fast as possible. Also ensure
  no metrics collection can happen if `metricsInterval="0s"` as intended.
  Before this change it was possible for some metric collection to still
  happen, even though none would be reported. ({pull}2330[#2330])
+
This change also guards against negative and invalid values in the following
configuration options: `abortedErrorThreshold`, `apiRequestTime`, and
`serverTimeout`. If an invalid value is given, then will fallback to their
default value.


[[release-notes-3.21.1]]
==== 3.21.1 2021/09/16

[float]
===== Bug fixes

* Update types to avoid imports of `@types/...` modules (other than
  `@types/node`), so that TypeScript users of elastic-apm-node need not
  manually `npm install @types/connect @types/pino @types/aws-lambda` to
  compile. ({issues}2331[#2331])


[[release-notes-3.21.0]]
==== 3.21.0 2021/09/15

[float]
===== Features
