@@ -505,11 +505,20 @@ Agent.prototype.captureError = function (err, opts, cb) {
       if (agent._transport) {
         agent.logger.info('Sending error to Elastic APM: %o', { id })
         agent._transport.sendError(apmError, function () {
-          agent.flush(function (flushErr) {
+          if (handled) {
             if (cb) {
-              cb(flushErr, id)
+              cb(null, id)
             }
-          })
+          } else {
+            // Immediately flush *unhandled* errors -- those from
+            // `uncaughtException` -- on the assumption that the process may
+            // soon crash.
+            agent.flush(function (flushErr) {
+              if (cb) {
+                cb(flushErr, id)
+              }
+            })
+          }
         })
       } else if (cb) {
         // TODO: Swallow this error just as it's done in agent.flush()?
